syntax = "proto3";

package payment;

option go_package = "payment-service/proto;paymentpb";

service PaymentService {
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc RefundPayment (RefundPaymentRequest) returns (RefundPaymentResponse);
}

message ProcessPaymentRequest {
  string order_id = 1;
  double amount = 2;
}

message ProcessPaymentResponse {
  bool success = 1;
  string message = 2;
}

message RefundPaymentRequest {
  string order_id = 1;
}

message RefundPaymentResponse {
  bool success = 1;
  string message = 2;
}
